--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -11,6 +11,8 @@
 name: Build OpenWrt
 
 on:
+  schedule:
+    - cron: 0 16 * * *
   repository_dispatch:
   workflow_dispatch:
     inputs:
@@ -18,9 +20,10 @@ on:
         description: 'SSH connection to Actions'
         required: false
         default: 'false'
-
+  
+     
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: .config
