--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -12,7 +12,7 @@ name: Build OpenWrt
 
 on:
   schedule:
-    - cron: 0 16 * * *
+    - cron: 0 16,8,0 * * *
   repository_dispatch:
   workflow_dispatch:
     inputs:
@@ -33,7 +33,7 @@ env:
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: false
   UPLOAD_WETRANSFER: false
-  UPLOAD_RELEASE: false
+  UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
 
 jobs:
